--- a/css/estilos_shop.css
+++ b/css/estilos_shop.css
@@ -281,12 +281,9 @@ header{
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: repeat(6, 550px);
-	grid-template-areas:"producto_1"
-			    "producto_2"
-			    "producto_3"
-			    "producto_4"
-			    "producto_5"
-			    "producto_6";
+	grid-template-areas:"producto_1 producto_2 producto_3"
+						"producto_4 producto_5 producto_6";
+	
 	grid-gap: 20px;
 	margin-bottom: 40px;
 }
@@ -574,9 +571,12 @@ footer{
 	.sub_grid_2{
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(3, 550px);
-		grid-template-areas:"producto_1 producto_2"
-							"producto_3 producto_4"
-							"producto_5 producto_6";
+		grid-template-areas:"producto_1"
+			    "producto_2"
+			    "producto_3"
+			    "producto_4"
+			    "producto_5"
+			    "producto_6";
 	}
 	.latest_sec{		
 		grid-template-columns: repeat(1, 1fr);
